--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "chokidar": "^3.5.3",
     "core-js": "^3.26.1",
     "element-ui": "^2.15.12",
+    "jsmind": "^0.6.3",
+    "konva": "^9.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
@@ -17,6 +19,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-component": "^1.1.1",
+    "less": "^4.1.3",
+    "less-loader": "^7.3.0",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
