--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "chokidar": "^3.5.3",
     "core-js": "^3.26.1",
     "element-ui": "^2.15.12",
